# PRG1_Recueil_Exercices

./: .gitignore
00 - Answers/: CMakeLists.txt  Ex02-11.cpp  Ex02-12.cpp  Ex02-14.cpp  Ex03-02-11.cpp  Ex03-03-01.cpp  Ex03-03-02.cpp  Ex03-09.cpp  Ex04-02a-03.cpp  Ex04-02a-04.cpp  Ex04-02a-05.cpp  Ex04-02b-03.cpp  Ex04-02b-04.cpp  Ex04-05-01.cpp  Ex04-05-02.cpp  Ex04-06-01.cpp  Ex04-07-02.cpp  Ex05-01-01.cpp  Ex05-01-02.cpp  Ex05-02-01.cpp  Ex05-03-02-Computer-Yann.cpp  Ex05-03-02.cpp  Ex05-04-01.cpp  Ex06-01.cpp  Ex06-02-01.cpp  Ex06-02-02.cpp  Ex07-02.cpp  Ex09-01-06.cpp  Ex09-02-03.cpp  Ex09-02-04.cpp  Ex09-02-06.cpp  Ex09-02-09.cpp  Ex09-03-07.cpp  Ex09-04-02.cpp  Ex10-03-02.cpp  Ex11-02-01.cpp  Ex11-03-01.cpp  Labo_2.cpp  Labo_3_CAGR.cpp  horror.cpp  (+6 more)
00 - Answers/Ex04-06-01_Saisie/: Ex04-06-01_Saisie.cpp  Ex04-06-01_Saisie.hpp
00 - Answers/Ex06-01_Saisie/: Ex06-01_Saisie.cpp  Ex06-01_Saisie.hpp
01 - Introduction/: 02-01-code_C++.cpp
02 - Elements de base/: 03-09 - volume une bouteille.md
04 - Fonctions/: 06-01 - librairie.md
05 - Flux/: 01-02 - lecture et ajout dans un fichier.md  02-01 - redirection cin.md  03-01 - formattage divers.md  03-02 - formattage infos etudiants.md  04-01 - controle de saisie infos etudiants.md
Answers/: CMakeLists.txt  Ex02b-02.cpp  Exercice9.cpp
